fixed some alignment issues

--- a/dronecones-app/assets/style.css
+++ b/dronecones-app/assets/style.css
@@ -15,8 +15,10 @@ body {
 .login{
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 576px;
-  height: 632px;
+  height: 576px;
   display: flex;
   border-radius: 16px;
   background: #4354AC;
@@ -30,25 +32,25 @@ body {
 }
 label {
   font-weight: bold;
+  margin: 16px 0px 8px 0px;
 }
 
-input[type="email"],
-input[type="password"] {
+input {
   border: none;
   width: 512px;
-  height: 48px;
-  border-radius: 16px;
+  height: 32px;
+  border-radius: 8px;
   background: #D662B5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
 }
 
 button {
-  width: 256px;
-  height: 64px;
-  flex-shrink: 0;
+  width: 128px;
+  height: 32px;
+  margin-top: 16px;
   background-color: #D662B5;
   color: #fff;
   border: none;
-  border-radius: 32px;
+  border-radius: 16px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
